crates/aiy-display/src/v2/snapshots/aiy_display__v2__parser__tests__enum_literal_whitespace.snap
---
source: crates/aiy-display/src/v2/parser.rs
expression: "strands(r#\"{0x1::option::Option<u64>::Some # 1 (42)}\"#)"
---
{ 0x0000000000000000000000000000000000000000000000000000000000000001::option::Option<u64>::Some#1(
      42u64,
  )
}
