crates/aiy-display/src/v2/snapshots/aiy_display__v2__parser__tests__enum_missing_index.snap
---
source: crates/aiy-display/src/v2/parser.rs
expression: "strands(r#\"{0x1::option::Option<u64>::Some(42)}\"#)"
---
Error: Unexpected '(' at offset 31, expected '#'
