crates/aiy-display/src/v2/snapshots/aiy_display__v2__parser__tests__expr_with_transform.snap
---
source: crates/aiy-display/src/v2/parser.rs
expression: "strands(r#\"{foo.bar.baz:url}\"#)"
---
{ foo.bar.baz
: url}
