crates/aiy-display/src/v2/snapshots/aiy_display__v2__parser__tests__hex_address_overflow.snap
---
source: crates/aiy-display/src/v2/parser.rs
expression: "strands(r#\"{@0x12345678901234567890123456789012345678901234567890123456789012345}\"#)"
---
Error: Invalid 'address': Invalid string length
