crates/aiy-display/src/v2/snapshots/aiy_display__v2__parser__tests__hex_literal_empty.snap
---
source: crates/aiy-display/src/v2/parser.rs
expression: "strands(r#\"{0x}\"#)"
---
Error: Unexpected identifier "x" at offset 2, expected one of 'u128', 'u16', 'u256', 'u32', 'u64', or 'u8'
